--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -3,6 +3,10 @@
     padding: 0;
     margin: 0;
 }
+/* font familys 
+font-family: 'DM Serif Display', serif;
+font-family: 'Playfair Display', serif;
+font-family: 'Raleway', sans-serif; */
 :root{
     --secondary: #fda7f0;
     --primary: #f80ad5;
@@ -13,8 +17,8 @@ a{
     color: white;
 }
 a:hover{
-    font-weight: bolder;
-    color: black;
+    font-weight: 900;
+    
 }
 
 body,html{ 
@@ -31,8 +35,15 @@ body,html{
     background-repeat: no-repeat;
     background-size: cover;
 }
+h1{
+    font-family: 'DM Serif Display', serif; 
+}
+h2{
+    font-family: 'Playfair Display', serif;
+}
 p{
     line-height: 2;
+    font-family: 'Raleway', sans-serif;
 }
 
 
@@ -102,6 +113,16 @@ p{
     height: 12vh;/* changes the height of the div  */
     
 /* effects C a tag and nav  */
+}
+.flex-logo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    /* background-color: red; */
+}
+.flex-logo img{
+    width: 65px;
 }
 .bar nav{
     /* background-color: red; */
