--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -16,6 +16,9 @@ a{
     text-decoration: none;
     color: white;
 }
+a nav{
+    color: white;
+}
 a:hover{
     font-weight: 900;
     
@@ -54,6 +57,12 @@ p{
     flex-direction: row;
     justify-content: flex-start;
 }
+.alert-error{
+    background-color: rgb(248, 167, 167);
+}
+.required:after { content: "*"; color: red};
+
+
 .container{
     /* effect c div .bar in reg html 
     to see what effecting change background color*/
@@ -69,9 +78,10 @@ p{
     margin: 1rem 3rem;
     background-color: white;
     padding: .5rem; /* inside of each row  */
+    margin-top: 3rem;
     
 }
-/* .flex-vertical{
+/* .flex-names{
     background-color: aqua;
     display: flex;
     flex-direction: column;
@@ -81,7 +91,7 @@ p{
 } */
 /* header  */
 .site-header{
-    background-color: white;
+    background-color: var(--primary);
     height: 15rem;
 }
 
@@ -100,9 +110,16 @@ p{
     /* effect C div .container & .flex-vertical */
     background-color: #f80ad5;
 }
-.flex-vertical{
-    /* effect c div .bar  */
-
+.flex-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.flex-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .bar{
     /* background-color: red; */
@@ -133,4 +150,22 @@ p{
     align-items: center;
     font-size: smaller;
     
+}
+#pets{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 1rem;
+    margin-top: 1rem;
+
+}
+.pet{
+    background-color: white;
+    border: 1px solid var(--primary);
+    border-radius: 1rem;
+    padding: 1rem;
+}
+.table{
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
 }
