--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
 }
-/* font familys 
+/* font familiess 
 font-family: 'DM Serif Display', serif;
 font-family: 'Playfair Display', serif;
 font-family: 'Raleway', sans-serif; */
@@ -275,7 +275,7 @@ p{
     border-radius: 5px;
 }
 .form-control{
-    margin: 10px;
+    margin-top: 10px;
     /* background-color: red; */
 }
 .form-control label{
